tooltips fixed by using non-negative z-index values

--- a/calypso.css
+++ b/calypso.css
@@ -64,7 +64,7 @@
   height: 750px;
   background-color: #8800DD;
   border-radius: 20px;
-  z-index: -1;
+  z-index: 1;
 }
 
 .clp-game-info {
@@ -267,7 +267,7 @@
 .clp-calypsocard-space {
   outline: solid 1px black;
   /* background-color: #AAA; */
-  z-index: 0;
+  z-index: 2;
   background-image: url("img/cards_layout.jpg");
 }
 
@@ -321,7 +321,7 @@
   height: 32px;
   background-image: url("img/dealer.png");
   /* can swap out placeholder image in directory ;) */
-  z-index: 1;
+  z-index: 3;
 }
 
 .clp-playername {
@@ -423,7 +423,7 @@
   position: absolute;
   right: 5%;
   top: 10%;
-  z-index: 40;
+  z-index: 0;
 }
 
 .clp-score-button {
@@ -441,6 +441,7 @@
 
 .clp-score-button-inactive {
   background-color: #888888;
+  opacity: 0.5;
 }
 
 .clp-score-button-active {
