--- a/calypso_style.scss
+++ b/calypso_style.scss
@@ -83,7 +83,7 @@ $left_offset: 40%;
     height: $table_size;
     background-color: $calypso_colour;
     border-radius: 20px;
-    z-index: -1;
+    z-index: 1;
 }
 
 $info_size: 20px;
@@ -243,7 +243,7 @@ $suit_height: 32px;
 .clp-calypsocard-space {
     outline: solid 1px black;
     /* background-color: #AAA; */
-    z-index: 0;
+    z-index: 2;
     background-image: url('img/cards_layout.jpg'); 
 }
 .clp-captured-card {
@@ -308,7 +308,7 @@ $personal_area_height: $calypso_bottom_buffer + $card_height + $renounce_size + 
     width: $renounce_size;
     height: $renounce_size;
     background-image: url('img/dealer.png');  /* can swap out placeholder image in directory ;) */
-    z-index: 1;
+    z-index: 3;
 }
 
 $max_name_size: 200px;
@@ -413,7 +413,7 @@ $personal_area_bottom_offset: 20px;
     position: absolute;
     right: 5%;
     top: 10%;
-    z-index: 40;
+    z-index: 0;
 }
 $button_height: 50px;
 $button_width: 200px;
@@ -432,6 +432,7 @@ $button_font_size: $info_size;
 }
 .clp-score-button-inactive{
     background-color: #888888;
+    opacity: 0.5;
 }
 .clp-score-button-active{
     background-color: $calypso_colour;
